[tool.poetry]
name = "goalquest-backend"
version = "0.1.0"
description = ""
authors = ["MethasakTKL <methasak.tkl@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.2"
sqlmodel = "^0.0.21"
pg8000 = "^1.31.2"
asyncpg = "^0.29.0"
pydantic-settings = "^2.4.0"
passlib = "^1.7.4"
pyjwt = "^2.9.0"
uvicorn = "^0.30.6"
bcrypt = "^4.2.0"
email-validator = "^2.2.0"
greenlet = "^3.0.3"
postgres = "^4.0"
python-multipart = "^0.0.9"
pytest = "^8.3.2"
httpx = "^0.27.2"
pytest-asyncio = "^0.24.0"
gevent = "^24.2.1"
aiosqlite = "^0.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
